@@ -42,7 +42,7 @@ LOGDIR=${FILEDIR}/logs
 RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 INPUTDIR=${FILEDIR}/input
-INFILE_NAME_GZ=${DATADOWNLOADS}/snapshot.geneontology.org/products/annotations/mgi-prediction.gaf
+INFILE_NAME_GZ=${DATADOWNLOADS}/snapshot.geneontology.org/products/upstream_and_raw_data/mgi-prediction.gaf
 INFILE_NAME_GAF=${INPUTDIR}/mgi-prediction.gaf
 INFILE_NAME=${INPUTDIR}/gocfp.annot
 INFILE_NAME_ERROR=${INPUTDIR}/gocfp.error
