@@ -10,6 +10,7 @@ TAG: goload-6-0-22-3
 DATE: 03/24/2023, 04/10/2023
 STAFF: lec
 wts2-1137/fl2-247/GOA load scripts update to include GO annotations to 'polymorphic pseudogene'
+wts2-1137/fl2-283/The directory where the Noctua annotations are located is changing
 
 TAG: goload-6-0-22-2
 DATE: 02/21/2023
